--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "A higher-order component of React that support multi-timers management.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "rollup -c --watch",
+    "build": "cross-env NODE_ENV=production rollup -c"
   },
   "repository": {
     "type": "git",
@@ -25,6 +27,15 @@
   },
   "homepage": "https://github.com/AmoyDreamer/react-hoc-timers#readme",
   "devDependencies": {
-    "react": "^17.0.2"
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@babel/preset-react": "^7.13.13",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.0",
+    "@rollup/plugin-node-resolve": "^13.0.0",
+    "cross-env": "^7.0.3",
+    "react": "^17.0.2",
+    "rollup": "^2.50.1",
+    "rollup-plugin-uglify": "^6.0.4"
   }
 }
