--- a/package.json
+++ b/package.json
@@ -33,9 +33,12 @@
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^19.0.0",
     "@rollup/plugin-node-resolve": "^13.0.0",
+    "babel-eslint": "^10.1.0",
     "cross-env": "^7.0.3",
+    "eslint-plugin-react": "^7.23.2",
     "react": "^17.0.2",
     "rollup": "^2.50.1",
+    "rollup-plugin-eslint": "^7.0.0",
     "rollup-plugin-uglify": "^6.0.4"
   }
 }
